<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:padding="16dp"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/addressView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/addressResource" />

        <EditText
            android:id="@+id/addressText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/addressResource"
            android:inputType="textPostalAddress" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="18dp" />

        <TextView
            android:id="@+id/cityView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cityResource" />

        <EditText
            android:id="@+id/cityText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/cityResource"
            android:inputType="textPostalAddress" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="18dp" />

        <TextView
            android:id="@+id/postalCodeView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/postalCodeResource" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent">

            <EditText
                android:id="@+id/postalCode1Text"
                android:layout_width="49dp"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:ems="10"
                android:hint="0000"
                android:maxLength="4"
                android:inputType="number" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:text="-" />

            <EditText
                android:id="@+id/postalCode2Text"
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:baselineAligned="false"
                android:ems="10"
                android:hint="000"
                android:maxLength="3"
                android:inputType="number" />

        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="18dp" />

        <TextView
            android:id="@+id/descriptionView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/descriptionResource" />

        <EditText
            android:id="@+id/descriptionText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/descriptionResource"
            android:inputType="textMultiLine"
            android:maxLines="3"
            android:minLines="3"
            android:singleLine="false"
            android:gravity="top"
            android:layout_gravity="top"/>

        <Space
            android:layout_width="match_parent"
            android:layout_height="18dp" />

        <TextView
            android:id="@+id/InstallationTypeView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/installationTypeResource" />

        <Spinner
            android:id="@+id/installationTypeSpinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="18dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="340dp"
            android:orientation="vertical">
            <fragment xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/map"
                android:name="com.google.android.gms.maps.SupportMapFragment" />
        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="24dp" />

        <Button
            android:id="@+id/saveButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/saveResource" />

        <Button
            android:id="@+id/markAsFinishedButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/markAsFinishedResource" />
    </LinearLayout>
</ScrollView>